删除主页冗余内容 修复微信小程序图片显示

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -21,7 +21,7 @@
             
             <p><input type="submit" class="am-btn am-btn-secondary am-btn-block am-radius" name="login_submit" value="登录"></p>
             
-            <p><button type="button" class="am-btn am-btn-block am-btn-success am-radius" data-am-modal="{target: '#my-xxjz'}">客户端 / 小程序</button></p>
+            <p><button type="button" class="am-btn am-btn-block am-btn-success am-radius" data-am-modal="{target: '#my-xxjz'}">微信小程序</button></p>
 
             <p><button type="button" class="am-btn am-btn-block am-btn-default am-radius" data-am-modal="{target: '#my-popup'}">忘记密码</button></p>
             
@@ -85,20 +85,9 @@
       <fieldset>
         <legend>微信小程序</legend>
         <figure data-am-widget="figure" class="am am-figure am-figure-default "   data-am-figure="{  pureview: 'false' }">
-          <img src="//image.jz.xxgzs.org/xxjzWeChat.png?imageView2/2/w/172/h/172/interlace/1/q/100" data-rel="//image.jz.xxgzs.org/xxjzWeChatW.png" alt="小歆记账 for 微信小程序"/>
+          <img src="__PUBLIC__/Home/i/xxjz-wechat-min.png" data-rel="__PUBLIC__/Home/i/xxjz-wechat.png" alt="小歆记账 for 微信小程序"/>
         </figure>
         <div class="am-text-center">使用微信扫描此二维码，即可使用小歆记账。</div>
-        <hr />
-      </fieldset>
-
-      <fieldset>
-        <legend>小歆记账AUI</legend>
-        <a class="am-btn am-btn-success am-btn-block am-radius" href="{$app_ios_url}">
-          <i class="am-icon-apple"></i>&nbsp;苹果（停止使用）
-        </a>
-        <a class="am-btn am-btn-success am-btn-block am-radius" href="{$app_android_url}">
-          <i class="am-icon-android"></i>&nbsp;安卓（停止维护）
-        </a>
         <hr />
       </fieldset>
 
