--- a/Application/Home/View/Add/index.html
+++ b/Application/Home/View/Add/index.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-    <include file="Public:list_common"/>
+    <include file="Public:list_account"/>
     <gt name="PageMax" value="1">
         <a href="__APP__/Home/Index/index/p/2" class="am-btn am-btn-block am-btn-default">更多</a>
     </gt>
