变更账单模板文件名

--- a/Application/Home/View/Class/proc.html
+++ b/Application/Home/View/Class/proc.html
@@ -40,5 +40,5 @@
         </div>
         <p><a href="__APP__/Home/Class/index/type/{$ClassType}" class="am-btn am-btn-default am-btn-block">返回</a></p>
     </fieldset>
-    <include file="Public:list_common"/>
+    <include file="Public:list_account"/>
 </block>
