--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -4,8 +4,13 @@
         <fieldset id="accordion">
             <legend>新建资金账户</legend>
             <div class="am-input-group">
-                <span class="am-input-group-label"><b>名称</b></span>
+                <span class="am-input-group-label"><b>账户名称</b></span>
                 <input type="text" class="am-form-field" id="text-funds" name="funds_name" placeholder="输入资金账户名称">
+            </div>
+            <p></p>
+            <div class="am-input-group">
+                <span class="am-input-group-label"><b>默认金额</b></span>
+                <input type="number" class="am-form-field" id="text-money" name="funds_money" placeholder="输入资金账户默认金额">
             </div>
             <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="funds_submit" value="新建"></p>
         </fieldset>
@@ -18,17 +23,19 @@
             <thead>
                 <tr>
                     <th width='80' bgcolor="#FFFFFF">资金账户</th>
+                    <th width='80' bgcolor="#FFFFFF">默认金额</th>
                     <th width='80' bgcolor="#FFFFFF">收入金额</th>
                     <th width='80' bgcolor="#FFFFFF">支出金额</th>
-                    <th width='80' bgcolor="#FFFFFF">剩余金额</th>
+                    <th width='80' bgcolor="#FFFFFF">账户金额</th>
                     <th width='80' bgcolor="#FFFFFF">记录数</th>
                     <th width='80' bgcolor="#FFFFFF">编辑</th>
                 </tr>
             </thead>
             <tbody class="">
-                <volist name="ShowData" id="data">
+                <volist name="FundsData" id="data">
                 <tr>
                     <td class="am-text-middle">{$data.name}</td>
+                    <td class="am-text-middle money-format">{$data.money.init}</td>
                     <td class="am-text-middle money-format">{$data.money.in}</td>
                     <td class="am-text-middle money-format">{$data.money.out}</td>
                     <td class="am-text-middle money-format">{$data.money.over}</td>
@@ -46,5 +53,11 @@
                 </volist>
             </tbody>
         </table>
+    </fieldset>
+
+    <p></p>
+    <fieldset id="transfer-table">
+        <legend>转账明细</legend>
+        <include file="Public:list_transfer"/>
     </fieldset>
 </block>
