调整界面文字描述

--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -57,7 +57,7 @@
 
     <p></p>
     <fieldset id="transfer-table">
-        <legend>转账明细</legend>
+        <legend>账户转账明细</legend>
         <include file="Public:list_transfer"/>
     </fieldset>
 </block>
