--- a/Application/Home/View/Add/index.html
+++ b/Application/Home/View/Add/index.html
@@ -1,6 +1,6 @@
 <extend name="Public:common"/>
 <block name="main">
-    <div data-am-widget="tabs" class="am-tabs am-tabs-secondary" >
+    <div data-am-widget="tabs" class="am-tabs am-tabs-secondary" id="doc-form-tabs" >
         <ul class="am-tabs-nav am-cf">
             <if condition="$type eq 1">
                 <li class=""><a href="[data-tab-panel-2]">支出</a></li>
@@ -9,6 +9,7 @@
                 <li class="am-active"><a href="[data-tab-panel-2]">支出</a></li>
                 <li class=""><a href="[data-tab-panel-1]">收入</a></li>
             </if>
+            <li class=""><a href="__APP__/Home/Add/transfer">转账</a></li>
         </ul>
         <div class="am-tabs-bd">
             <if condition="$type eq 1">
@@ -62,7 +63,7 @@
                     <div class="am-input-group">
                         <span class="am-input-group-label"><b>时间</b></span>
                         <input type="date" class="am-form-field" id="text-time" name="add_time" 
-                                value="<php>echo date("Y-m-d",time());</php>" />
+                                value="<php>echo date("Y-m-d",time());</php>" style="height: auto;" />
                     </div>
                     
                     <p><hr data-am-widget="divider" style="" class="am-divider am-divider-dashed" /></p>
@@ -131,6 +132,9 @@
                     <p><a href="{$refURL}" class="am-btn am-btn-block am-btn-default">返回</a></p>
                 </form>
             </div>
+            <div data-tab-panel-3 class="am-tab-panel">
+                <include file="Public:loading"/>
+            </div>
         </div>
     </div>
     <include file="Public:list_account"/>
@@ -149,6 +153,11 @@
       }
 
       $(function() {
+        $('#doc-form-tabs').find('a').on('opened.tabs.amui', function(e) {
+          if ($(this).text() == '转账') {
+            window.location.href=$(this).context.href;
+          }
+        });
         $('#doc-form-file-out').on('change', function() {
           var fileNames = '';
           var fileSize = 0;
