--- a/Application/Home/View/Funds/edit.html
+++ b/Application/Home/View/Funds/edit.html
@@ -2,10 +2,15 @@
 <block name="main">
     <form class="am-form am-form-horizontal" method="post" data-am-validator="H5validation:false">
         <fieldset>
-            <legend>编辑资金账户名</legend>
+            <legend>编辑资金账户</legend>
             <div class="am-input-group">
-                <span class="am-input-group-label"><b>资金账户名称</b></span>
-                <input type="text" class="am-form-field" id="text-funds" name="funds_name" value="{$FundsName}">
+                <span class="am-input-group-label"><b>账户名称</b></span>
+                <input type="text" class="am-form-field" id="text-funds" name="funds_name" value="{$FundsName}" required>
+            </div>
+            <p></p>
+            <div class="am-input-group">
+                <span class="am-input-group-label"><b>初始金额</b></span>
+                <input type="number" class="am-form-field" id="text-money" name="funds_money" step=0.01 placeholder="输入账户默认金额" value="{$FundsMoney.init}">
             </div>
             <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="funds_submit" value="编辑"></p>
             <p><a href="__APP__/Home/Funds/index" class="am-btn am-btn-block am-btn-default">返回</a></p>
