--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -22,13 +22,13 @@
         <table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered am-text-sm">
             <thead>
                 <tr>
-                    <th width='80' bgcolor="#FFFFFF">资金账户</th>
-                    <th width='80' bgcolor="#FFFFFF">初始金额</th>
-                    <th width='80' bgcolor="#FFFFFF">收入金额</th>
-                    <th width='80' bgcolor="#FFFFFF">支出金额</th>
-                    <th width='80' bgcolor="#FFFFFF">账户金额</th>
-                    <th width='80' bgcolor="#FFFFFF">记录数</th>
-                    <th width='80' bgcolor="#FFFFFF">编辑</th>
+                    <th bgcolor="#FFFFFF">资金账户</th>
+                    <th bgcolor="#FFFFFF">初始金额</th>
+                    <th bgcolor="#FFFFFF">收入金额</th>
+                    <th bgcolor="#FFFFFF">支出金额</th>
+                    <th bgcolor="#FFFFFF">账户金额</th>
+                    <th bgcolor="#FFFFFF">记录数</th>
+                    <th bgcolor="#FFFFFF">编辑</th>
                 </tr>
             </thead>
             <tbody class="">
@@ -42,11 +42,10 @@
                     <td class="am-text-middle">{$data.money.count}</td>
                     <td class="am-text-middle">
                         <if condition="$data.id eq -1 ">
-                            <a href="javascript:void(0);" onclick="alert('初始资金账户无法编辑。');">编辑</a> 
+                            <a href="__APP__/Home/Funds/edit/id/{$data['id']}">移除</a>
+                            <!-- <a href="javascript:void(0);" onclick="alert('初始资金账户无法编辑。');">编辑</a> --> 
                         <else />
-                            <php>
-                                echo "<a href=".U("Home/Funds/edit?id=".$data['id']).">编辑</a>";
-                            </php>
+                            <a href="__APP__/Home/Funds/edit/id/{$data['id']}">编辑</a>
                         </if>
                     </td>
                 </tr>
