--- a/Application/Home/View/Public/list_account.html
+++ b/Application/Home/View/Public/list_account.html
@@ -31,31 +31,33 @@
 </table>
 
 <!--分页大于1时显示-->
-<gt name="PageMax" value="1">
-<ul data-am-widget="pagination" class="am-pagination am-pagination-select">
-    <li class="am-pagination-prev ">
-        <if condition="1 neq $Page "> <a href="__ACTION__/p/{$Page-1}#money-table" class="">上一页</a> 
-        <else /> <a href="__ACTION__/p/{$Page}#money-table" class="">上一页</a> 
-        </if>
-    </li>
-    
-    <li class="am-pagination-select">
-        <select id="pid" onchange="SelectChange()" style="-webkit-appearance: button;">
-            <foreach name="ArrPage" item="i">
-                <if condition="$i eq $Page "> 
-                    <option value="__ACTION__/p/{$i}#money-table" selected="selected">&nbsp;{$i}</option>
-                <else /> 
-                    <option value="__ACTION__/p/{$i}#money-table" class="">&nbsp;{$i}</option>
-                </if>
-            </foreach>
-        </select>
-    </li>
-    
-    
-    <li class="am-pagination-next ">
-        <if condition="$PageMax neq $Page "> <a href="__ACTION__/p/{$Page+1}#money-table" class="">下一页</a>
-        <else /> <a href="__ACTION__/p/{$Page}#money-table" class="">下一页</a> 
-        </if>
-    </li>
-</ul>
-</gt>
+<if condition="$PageMax gt 1">
+    <ul data-am-widget="pagination" class="am-pagination am-pagination-select">
+        <li class="am-pagination-prev ">
+            <if condition="1 neq $Page "> <a href="__ACTION__/p/{$Page-1}#money-table" class="">上一页</a> 
+            <else /> <a href="__ACTION__/p/{$Page}#money-table" class="">上一页</a> 
+            </if>
+        </li>
+        
+        <li class="am-pagination-select">
+            <select id="pid" onchange="SelectChange()" style="-webkit-appearance: button;">
+                <foreach name="ArrPage" item="i">
+                    <if condition="$i eq $Page "> 
+                        <option value="__ACTION__/p/{$i}#money-table" selected="selected">&nbsp;{$i}</option>
+                    <else /> 
+                        <option value="__ACTION__/p/{$i}#money-table" class="">&nbsp;{$i}</option>
+                    </if>
+                </foreach>
+            </select>
+        </li>
+        
+        
+        <li class="am-pagination-next ">
+            <if condition="$PageMax neq $Page "> <a href="__ACTION__/p/{$Page+1}#money-table" class="">下一页</a>
+            <else /> <a href="__ACTION__/p/{$Page}#money-table" class="">下一页</a> 
+            </if>
+        </li>
+    </ul>
+<elseif condition="$PageMax eq null"/>
+    <p><a href="__APP__/Home/Index/index#money-table" class="am-btn am-btn-block am-btn-default">更多记账明细</a></p>
+</if>
