优化代码风格

--- a/Application/Home/View/Add/index.html
+++ b/Application/Home/View/Add/index.html
@@ -62,7 +62,7 @@
                     <div><p></p></div>
                     <div class="am-input-group">
                         <span class="am-input-group-label"><b>时间</b></span>
-                        <input type="date" class="am-form-field" id="text-time" name="add_time" value="<php>echo date("Y-m-d",time());</php>" style="height: auto;" />
+                        <input type="date" class="am-form-field" id="text-time" name="add_time" value="<php>echo date('Y-m-d',time());</php>" style="height: auto;" />
                     </div>
                     
                     <p><hr data-am-widget="divider" style="" class="am-divider am-divider-dashed" /></p>
@@ -122,7 +122,7 @@
                     <div><p></p></div>
                     <div class="am-input-group">
                         <span class="am-input-group-label"><b>时间</b></span>
-                        <input type="date" class="am-form-field" id="text-time" name="add_time" value="<php>echo date("Y-m-d",time());</php>" style="height: auto;"/>
+                        <input type="date" class="am-form-field" id="text-time" name="add_time" value="<php>echo date('Y-m-d',time());</php>" style="height: auto;"/>
                     </div>
                     <p><hr data-am-widget="divider" style="" class="am-divider am-divider-dashed" /></p>
                     
