--- a/Application/Home/View/Edit/index.html
+++ b/Application/Home/View/Edit/index.html
@@ -69,8 +69,7 @@
                 <div><p></p></div>
                 <div class="am-input-group">
                     <span class="am-input-group-label"><b>时间</b></span>
-                    <input type="date" class="am-form-field" id="text-time" name="edit_time" 
-                            value="<php>echo date("Y-m-d",$ShowData['time']);</php>" />
+                    <input type="date" class="am-form-field" id="text-time" name="edit_time" value="<php>echo date('Y-m-d',$ShowData['time']);</php>" style="height: auto;" />
                 </div>
 
                 <if condition="$ImageData neq false ">
