增加记账列表删除转账功能

--- a/Application/Home/View/Public/list_account.html
+++ b/Application/Home/View/Public/list_account.html
@@ -35,7 +35,8 @@
                     <a href="__APP__/Home/Edit/index/id/{$data.id}">编辑 </a>
                     <a href="javascript:void(0);" onclick="isDelete('__APP__/Home/Edit/del/id/{$data.id}')"> 删除</a>
                 <else />
-                    <a href="__APP__/Home/Edit/transfer/id/{$data.id}">编辑</a> 
+                    <a href="__APP__/Home/Edit/transfer/id/{$data.id}">编辑</a>
+                    <a href="javascript:void(0);" onclick="isDelete('__APP__/Home/Edit/deleteTransfer/id/{$data.id}')"> 删除</a>
                 </if>
             </td>
         </tr>
