--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -65,7 +65,7 @@
           支出:<font class="am-text-danger money-format" >{$SumOutMoney}</font> &nbsp;
           剩余:<font class="am-text-primary money-format">{$SumInMoney - $SumOutMoney}</font>
           <if condition="$isTransfer">
-            <span class="am-badge am-round" style="margin-left: 6px;">含转账</span>
+            <span class="am-badge am-badge-secondary am-round" style="margin-left: 6px;">含转账</span>
           <else/>
             <span class="am-badge am-round" style="margin-left: 6px;">不含转账</span>
           </if>
