修复二次检索造成的页码溢出的BUG

--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -1,6 +1,6 @@
 <extend name="Public:common"/>
 <block name="main">
-    <form class="am-form am-form-horizontal" method="post" data-am-validator="H5validation:false">
+    <form action="__APP__/Home/Find/index" class="am-form am-form-horizontal" method="post" data-am-validator="H5validation:false">
         <fieldset id="accordion">
         <legend data-am-collapse="{parent: '#accordion', target: '#do-not-say-1'}">查询账目</legend>
         <if condition="$ShowFind eq 1">
