增加账户排序功能UI

--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -18,7 +18,13 @@
 
     <p></p>
     <fieldset id="accordion">
-        <legend>管理资金账户</legend>
+        <legend class="am-cf">
+            <div class="am-fl">管理资金账户</div>
+            <div class="am-fr">
+                <button class="am-btn am-btn-sm am-btn-success am-round sortEnable" style="display: none;" id="sortSave">保存</button>
+                <button class="am-btn am-btn-sm am-btn-default am-round" id="sortButton">排序</button>
+            </div>
+        </legend>
         <table class="am-table am-table-bordered am-table-radius am-table-striped am-table-centered am-text-sm">
             <thead>
                 <tr>
@@ -28,26 +34,31 @@
                     <th bgcolor="#FFFFFF">支出金额</th>
                     <th bgcolor="#FFFFFF">账户金额</th>
                     <th bgcolor="#FFFFFF">记录数</th>
-                    <th bgcolor="#FFFFFF">编辑</th>
+                    <th bgcolor="#FFFFFF" class="sortDisable">编辑</th>
+                    <th bgcolor="#FFFFFF" class="sortEnable" style="display: none;">排序</th>
                 </tr>
             </thead>
-            <tbody class="">
+            <tbody id="sortFunds">
                 <volist name="FundsData" id="data">
-                <tr>
+                <tr data-id="{$data['id']}">
                     <td class="am-text-middle">{$data.name}</td>
                     <td class="am-text-middle money-format">{$data.money.init}</td>
                     <td class="am-text-middle money-format">{$data.money.in}</td>
                     <td class="am-text-middle money-format">{$data.money.out}</td>
                     <td class="am-text-middle money-format">{$data.money.over}</td>
                     <td class="am-text-middle">{$data.money.count}</td>
-                    <td class="am-text-middle">
-                        <if condition="$data.id eq -1 ">
+                    <if condition="$data.id eq -1 ">
+                        <td class="am-text-middle">
                             <a href="__APP__/Home/Funds/edit/id/{$data['id']}">移除</a>
-                            <!-- <a href="javascript:void(0);" onclick="alert('初始资金账户无法编辑。');">编辑</a> --> 
-                        <else />
+                        </td>
+                    <else />
+                        <td class="am-text-middle sortDisable">
                             <a href="__APP__/Home/Funds/edit/id/{$data['id']}">编辑</a>
-                        </if>
-                    </td>
+                        </td>
+                        <td class="am-text-middle sortEnable" style="display: none;">
+                            <i class="am-icon-arrows"></i>
+                        </td>
+                    </if>
                 </tr>
                 </volist>
             </tbody>
@@ -59,4 +70,47 @@
         <legend>账户转账明细</legend>
         <include file="Public:list_transfer"/>
     </fieldset>
+</block>
+
+<block name="javascript">
+    <script src="__PUBLIC__/Home/js/sortable.min.js"></script>
+    <script type="text/javascript">
+        var el = document.getElementById('sortFunds');
+        var sortable = Sortable.create(el, {
+            handle: ".sortEnable",
+            ghostClass: "am-active",
+            onMove: function (evt) {
+                return evt.related.dataset.id !== "-1";
+            },
+            onUpdate: function (evt) {
+                
+            },
+        });
+        if (sortable) {
+            $("#sortButton").click(function(){
+                if ($("#sortButton").text() === "排序") {
+                    $("#sortButton").text("取消");
+                    $(".sortDisable").hide();
+                    $(".sortEnable").show();
+                } else {
+                    $("#sortButton").text("排序");
+                    $(".sortEnable").hide();
+                    $(".sortDisable").show();
+                }
+            });
+            $("#sortSave").click(function(){
+                var order = sortable.toArray();
+                if (parseInt(order[0]) === -1) {
+                    order.splice(0, 1); 
+                }
+                console.log(JSON.stringify(order).replace(/"/g, ''));
+                try {
+                    FormPost("__APP__/Home/Funds/sort", {'data': JSON.stringify(order).replace(/"/g, '')});
+                }catch(e){
+                    console.log(e);
+                    alert("缺少FormPost组件，请联系管理员。");
+                }
+            });
+        }
+    </script>
 </block>
